apps/download/download/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: download
spec:
  selector:
    app: download
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
